Tests/Negative/TraitImplementingTrait.mr
trait T1 {}

trait T2 {}

impl T1 for T2 {} // Error: Can only implement traits for structures
